--- a/styles.css
+++ b/styles.css
@@ -254,7 +254,7 @@
     box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.25);
 border-radius: 20px;
     position: absolute;
-    top: 180px;
+    top: 100px;
 }
 .login__form,.signup__form{
     width: 100%;
@@ -287,8 +287,9 @@ border-radius: 20px;
     border-radius: 8px;
     font-size: 18px;
 }
-#login__username--error,#login__reg--error,#login__username--error,#signup__username--error,#login__reg--error{
+#login__username--error,#signup__reg--error,#login__reg--error,#login__username--error,#signup__username--error,#login__reg--error{
     color: var(--white-color);
+    display: none;
 }
 .login__btn,.signup__btn{
     width: 100%;
@@ -334,6 +335,68 @@ border-radius: 20px;
 }
 .login__create--button{
     width: 200px;
+}
+.popup--container{
+    width: 100%;
+    height: 100vh;
+    display: none;
+    transition: 0.6s 0.3s ease-in-out ;
+    position: absolute;
+    opacity: 0;
+    background-color: rgba(0, 0, 0, 0.595);
+    cursor: pointer;
+    z-index: 100;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+.popup--display{
+    display: block;
+    opacity: 1;
+}
+.popup--content{
+    width: 500px;
+    height: 200px;
+    max-width: 65%;
+    border-radius: 30px;
+    position: absolute;
+    flex-direction: column;
+    gap: 25px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    padding: 30px;
+    background-color: var(--white-color);
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    margin: auto;
+}
+#popup--text{
+    font-family: var(--secondary-font);
+    font-size: 25px;
+    color: var(--brand-color);
+}
+.redirect--btn{
+    padding: 10px;
+    font-size: 20px;
+    cursor: pointer;
+    border: none;
+    transition:  0.3s 0.1s ease-out;
+    display: flex;
+    justify-content: center;
+    color: var(--white-color);
+    font-family: var(--secondary-font);
+    background-color: var(--secondary-color);
+    width: 115px;
+    border-radius: 10px;
+}
+.redirect--btn:hover{
+    background-color: var(--white-color);
+    border: 1px solid var(--secondary-color);
+    color: var(--black-color);
 }
 
 
